--- a/campaign/07152021-homepage/src/css/main.css
+++ b/campaign/07152021-homepage/src/css/main.css
@@ -9,7 +9,7 @@ button {
     box-sizing: border-box;
     padding: .5em .875em;
     border: 0;
-    margin: 0;
+    margin: 0 auto;
     border-radius: .25em;
     cursor: pointer;
     font-size: 1em;
@@ -20,13 +20,21 @@ button {
     transition: background-color .1s;
 }
 
+button:hover {
+    background-color: #254b87;
+}
+
+button:active {
+    background-color: #d14124;
+}
+
 img {
     margin: 0 auto;
     display: block;
     max-height: 100%;
     max-width: 100%;
 }
-
+/*
 #overlay {
     z-index: 100;
     background-color: #f2f4f7;
@@ -38,19 +46,20 @@ img {
     left: 0;
     position: fixed;
 }
-
-#start {
+*/
+#instructions {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-width: 500px;
 }
 
-#success-message {
+#task-instructions,
+#button-instructions,
+#loading-txt {
     font-family: 'Avenir Next',Arial,sans-serif;
     font-size: 18px;
-    position: absolute;
-    top: 125px;
-    right: 135px;
-    display: none;
+    text-align: center;
+    margin-bottom: 15px;
 }
